--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="social-icons">
               <a href="https://www.youtube.com/channel/UCpd6wVH09kJrDsmDNBPI9Ug"><i class="fab fa-youtube"></i></a>
               <a href="https://www.tiktok.com/@mgaming3x0"><i class="fab fa-tiktok"></i></a>
-              <a href="https://discord.com/channels/@me"><i class="fab fa-discord"></i></a> 
+              <a href="https://discord.com/channels/1160615687593664604/1160615688206024746"><i class="fab fa-discord"></i></a> 
               <a href="https://www.instagram.com/mgaming4036/?next=%2F"><i class="fab fa-instagram"></i></a>
 
           </div>
